--- a/PyTest/.settings/org.eclipse.core.resources.prefs
+++ b/PyTest/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
 eclipse.preferences.version=1
+encoding//crawling/naver_best_keyword.py=utf-8
 encoding//sample/test.py=utf-8
-encoding/crawling.py=utf-8
 encoding/utmk.py=utf-8
