--- a/PyTest/.settings/org.eclipse.core.resources.prefs
+++ b/PyTest/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,12 @@
 eclipse.preferences.version=1
+encoding//blockchain/blockapi.py=utf-8
+encoding//blockchain/blockchain.py=utf-8
+encoding//blockchain/blocktestcase.py=utf-8
+encoding//blockchain/creathash.py=utf-8
+encoding//blockchain/httpquery.py=utf-8
+encoding//blockchain/payload.py=utf-8
+encoding//blockchain/test_blockchain.py=utf-8
+encoding//blockchain/transactions.py=utf-8
 encoding//crawling/daum_best_keyword.py=utf-8
 encoding//crawling/naver_best_keyword.py=utf-8
 encoding//sample/test.py=utf-8
